force-app/main/default/objects/Global_Client_Revenue__c/Global_Client_Revenue__c.object-meta.xml
<CustomObject>
    <description>Case #1263 - Client Overview - Stores Global Client Revenue by reporting country data that is fed into salesforce on a monthly basis by CRT. The data from this object should only be shown on the client overview page and only be visible to the client owner and members on the client service team.</description>
    <label>Global Client Revenue</label>
    <nameField>
        <displayFormat>GCR-{0000000000}</displayFormat>
        <label>Global Client Revenue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Client Revenue</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>