force-app/main/default/objects/Global_Client_Revenue__c/fields/Booking_Country__c.field-meta.xml
<CustomField>
    <fullName>Booking_Country__c</fullName>
    <description>Used to store the Booking County against which Revenue and Budget information are captured (US-4059).</description>
    <inlineHelpText>A country against which Revenue and Budget information are booked.</inlineHelpText>
    <label>Booking Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>