force-app/main/default/objects/Global_Client_Revenue__c/fields/Budget_USD_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_USD_Next_Year__c</fullName>
    <description>Used to store the Budget for Next Year in USD</description>
    <label>Budget USD Next Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>