force-app/main/default/objects/Global_Client_Revenue__c/fields/Budget_ZAR_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_ZAR_Next_Year__c</fullName>
    <description>Used to store the Budget for next year in ZAR</description>
    <label>Budget ZAR Next Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>