force-app/main/default/objects/Global_Client_Revenue__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to Client Object</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Global Client Revenue</relationshipLabel>
    <relationshipName>Global_Client_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>