force-app/main/default/objects/Global_Client_Revenue__c/fields/Client_CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_CIF_Number__c</fullName>
    <label>Client CIF Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>