force-app/main/default/objects/Global_Client_Revenue__c/fields/Client_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sub_Sector__c</fullName>
    <description>Client&apos;s Sub-Sector</description>
    <inlineHelpText>Client&apos;s Sub-Sector</inlineHelpText>
    <label>Client Sub-Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>