force-app/main/default/objects/Global_Client_Revenue__c/fields/Client_Value_USD_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>Client_Value_USD_Previous_Year__c</fullName>
    <description>Used to store previous year Client Value in USD</description>
    <inlineHelpText>Full amount for the previous year</inlineHelpText>
    <label>Client Value USD Previous Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>