force-app/main/default/objects/Global_Client_Revenue__c/fields/Client_Value_ZAR_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Client_Value_ZAR_Current_Month__c</fullName>
    <description>Revenue for the month</description>
    <inlineHelpText>Revenue for the month</inlineHelpText>
    <label>Client Value ZAR Current Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>