force-app/main/default/objects/Global_Client_Revenue__c/fields/Client_Value_ZAR_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Client_Value_ZAR_Current_Year__c</fullName>
    <description>Used to store the Current Year ZAR value</description>
    <inlineHelpText>YTD amount for the current year</inlineHelpText>
    <label>Client Value ZAR Current Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>