force-app/main/default/objects/Global_Client_Revenue__c/fields/Client_Value_ZAR_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>Client_Value_ZAR_Previous_Year__c</fullName>
    <description>Used to store the Previous Year Client Value</description>
    <inlineHelpText>Full amount for the previous year</inlineHelpText>
    <label>Client Value ZAR Previous Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>