force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_ActualRevenueYTDLCY__c.field-meta.xml
<CustomField>
    <fullName>CRT_ActualRevenueYTDLCY__c</fullName>
    <label>Actual Revenue YTD (LCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>