force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_AnnualisedClientRevenueZAR__c.field-meta.xml
<CustomField>
    <fullName>CRT_AnnualisedClientRevenueZAR__c</fullName>
    <label>Annualised Client Revenue (ZAR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>