force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_AverageBalance__c.field-meta.xml
<CustomField>
    <fullName>CRT_AverageBalance__c</fullName>
    <label>Average Balance (ZAR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>