force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_AverageCreditBalancePYZAR__c.field-meta.xml
<CustomField>
    <fullName>CRT_AverageCreditBalancePYZAR__c</fullName>
    <label>Average Credit Balance PY (ZAR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>