force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_AverageCreditBalanceYTDLCY__c.field-meta.xml
<CustomField>
    <fullName>CRT_AverageCreditBalanceYTDLCY__c</fullName>
    <label>Average Credit Balance YTD (LCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>