force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_AverageDebitBalancePYLCY__c.field-meta.xml
<CustomField>
    <fullName>CRT_AverageDebitBalancePYLCY__c</fullName>
    <label>Average Debit Balance PY (LCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>