force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_AverageDebitBalanceYTDZAR__c.field-meta.xml
<CustomField>
    <fullName>CRT_AverageDebitBalanceYTDZAR__c</fullName>
    <label>Average Debit Balance YTD (ZAR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>