force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_Book__c.field-meta.xml
<CustomField>
    <fullName>CRT_Book__c</fullName>
    <description>Field to capture cost centre name (SFP-5166)</description>
    <inlineHelpText>Cost centre name</inlineHelpText>
    <label>Book</label>
    <length>80</length>
    <type>Text</type>
</CustomField>