force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_BookCode__c.field-meta.xml
<CustomField>
    <fullName>CRT_BookCode__c</fullName>
    <label>Book Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>