force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_BookingCountry__c.field-meta.xml
<CustomField>
    <fullName>CRT_BookingCountry__c</fullName>
    <label>Booking Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>