force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_BookingFranCo__c.field-meta.xml
<CustomField>
    <fullName>CRT_BookingFranCo__c</fullName>
    <label>Booking FranCo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>