force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_BusinessArea__c.field-meta.xml
<CustomField>
    <fullName>CRT_BusinessArea__c</fullName>
    <inlineHelpText>Business area to which revenue is earned against</inlineHelpText>
    <label>Business Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>