force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_Department__c.field-meta.xml
<CustomField>
    <fullName>CRT_Department__c</fullName>
    <description>Department to which revenue is earned against</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>