force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_Division__c.field-meta.xml
<CustomField>
    <fullName>CRT_Division__c</fullName>
    <inlineHelpText>Division to which revenue is earned against</inlineHelpText>
    <label>Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>