force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_GCRName__c.field-meta.xml
<CustomField>
    <fullName>CRT_GCRName__c</fullName>
    <label>GCR Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>