force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_GLAccountCode__c.field-meta.xml
<CustomField>
    <fullName>CRT_GLAccountCode__c</fullName>
    <description>General Ledger account number based on balance sheet/income statement (SFP-5166)</description>
    <inlineHelpText>General Ledger account number based on balance sheet/income statement</inlineHelpText>
    <label>GL Account Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>