force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_IncomeType__c.field-meta.xml
<CustomField>
    <fullName>CRT_IncomeType__c</fullName>
    <label>Income Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>