force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_LocalCurrencyLCY__c.field-meta.xml
<CustomField>
    <fullName>CRT_LocalCurrencyLCY__c</fullName>
    <label>Local Currency (LCY)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>