force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_TradingDeskFlag__c.field-meta.xml
<CustomField>
    <fullName>CRT_TradingDeskFlag__c</fullName>
    <label>Trading Desk Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>