force-app/main/default/objects/Global_Client_Revenue__c/fields/CRT_TradingDivision__c.field-meta.xml
<CustomField>
    <fullName>CRT_TradingDivision__c</fullName>
    <description>Field to capture Trade Division (SFP-5166)</description>
    <inlineHelpText>Division to which revenue is earned against</inlineHelpText>
    <label>Trading Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>