force-app/main/default/objects/Global_Client_Revenue__c/fields/Division_Product_Subsets__c.field-meta.xml
<CustomField>
    <fullName>Division_Product_Subsets__c</fullName>
    <description>Product belonging to different divisions</description>
    <label>Division Product Subsets</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Trading_Division__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Cash Equity</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Cash Management and Lending</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debt Capital Markets</fullName>
            </value>
            <value>
                <fullName>Debt Products</fullName>
            </value>
            <value>
                <fullName>Debt Solutions</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Equities</fullName>
            </value>
            <value>
                <fullName>Equity Derivatives</fullName>
            </value>
            <value>
                <fullName>Executive and Support</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange</fullName>
            </value>
            <value>
                <fullName>GM ROA</fullName>
            </value>
            <value>
                <fullName>Group Operations</fullName>
            </value>
            <value>
                <fullName>IB Enablers &amp; Management</fullName>
            </value>
            <value>
                <fullName>IB ROA</fullName>
            </value>
            <value>
                <fullName>Instalment Sale VAF</fullName>
            </value>
            <value>
                <fullName>Investment Banking - OTHER</fullName>
            </value>
            <value>
                <fullName>Investor Services</fullName>
            </value>
            <value>
                <fullName>LC African Product</fullName>
            </value>
            <value>
                <fullName>Lease Capital VAF</fullName>
            </value>
            <value>
                <fullName>Local Markets and IRT</fullName>
            </value>
            <value>
                <fullName>Management and Enablers</fullName>
            </value>
            <value>
                <fullName>Money Markets</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>