force-app/main/default/objects/Global_Client_Revenue__c/fields/Full_Budget_ZAR_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Full_Budget_ZAR_Current_Year__c</fullName>
    <description>Used to store the Full Year Budget for the current year in ZAR (US-3916)</description>
    <inlineHelpText>This is an annual budget for this client in ZAR value.</inlineHelpText>
    <label>Full Budget (ZAR) Current Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>