force-app/main/default/objects/Global_Client_Revenue__c/fields/GLB_CRT_GlobalClientID__c.field-meta.xml
<CustomField>
    <fullName>GLB_CRT_GlobalClientID__c</fullName>
    <externalId>true</externalId>
    <label>CRT Global Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>