force-app/main/default/objects/Global_Client_Revenue__c/fields/Reporting_Country__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Country__c</fullName>
    <label>Reporting Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>