force-app/main/default/objects/Global_Client_Revenue__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>Enh#119 Client Overview: The date when the snapshot in business objects was taken.

            EN 391 : The label changed due to Client Plan Dashboard requirement. The API name was not changed due to the dependency on other components.</description>
    <inlineHelpText>This is not the date at which snapshot is taken but rather the month end date to which the snapshot applies to (eg 31/03/2014)</inlineHelpText>
    <label>Month End Snapshot Date</label>
    <type>Date</type>
</CustomField>