force-app/main/default/objects/Global_Client_Revenue__c/fields/Trading_Division__c.field-meta.xml
<CustomField>
    <fullName>Trading_Division__c</fullName>
    <description>#EN 391 : Data type was changed from text to picklist for Client Plan Dashboard requirement. (More flexibility in reporting)</description>
    <label>Trading Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>IB</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>TPS</fullName>
            </value>
            <value>
                <fullName>VAF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>