force-app/main/default/objects/Global_Client_Revenue__c/recordTypes/Booking_Country_Current_Previous_year.recordType-meta.xml
<RecordType>
    <fullName>Booking_Country_Current_Previous_year</fullName>
    <active>true</active>
    <description>This record type captures the booking country revenue information for previous and current year (US-4059).</description>
    <label>Booking Country Current &amp; Previous year</label>
</RecordType>