force-app/main/default/objects/Global_Client_Revenue__c/recordTypes/CRT_Global_Client_Revenue.recordType-meta.xml
<RecordType>
    <fullName>CRT_Global_Client_Revenue</fullName>
    <active>true</active>
    <label>CRT Global Client Revenue</label>
</RecordType>