force-app/main/default/objects/Global_Client_Revenue__c/recordTypes/Current_Previous_Year.recordType-meta.xml
<RecordType>
    <fullName>Current_Previous_Year</fullName>
    <active>true</active>
    <description>This record type captures the information of Revenue for previous and current year</description>
    <label>Current &amp; Previous Year</label>
</RecordType>