force-app/main/default/objects/Global_Client_Revenue__c/recordTypes/Historical_Revenue.recordType-meta.xml
<RecordType>
    <fullName>Historical_Revenue</fullName>
    <active>true</active>
    <description>This record type captures the monthly revenue information</description>
    <label>Historical Revenue</label>
</RecordType>